# Brewget

./: .commitlint.config.js  .env.example  .gitignore  CAPTCHA_SETUP.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  I18N_GUIDE.md  IMPLEMENTATION_COMPLETE.md  NOTIFICATION_SERVICE_DEPLOY.md  PASSKEYS.md  PASSKEY_INTEGRATION_SUMMARY.md  Procfile  README.md  TRANSACTION_IMPLEMENTATION_SUMMARY.md  TRANSACTION_SETUP.md  WALLETS.md  WALLET_FEATURE.md  WALLET_SERVICE_MIGRATION.md  dev-stop.sh  dev.sh  docker-compose.yaml  docker-compose.yml  init-databases.sh
.github/: dependabot.yml  labeler.yml
backend/: Cargo.toml  Dockerfile  MIGRATIONS.md  SEPARATE_DATABASES.md  TESTING.md  cargo.toml  docker-compose.yaml
backend/auth-service/: Cargo.toml  Dockerfile  Dockerfile.dev  build.rs  diesel.toml
backend/auth-service/migrations/: 20250813145543_init.down.sql  20250813145543_init.up.sql  20250813171838_create_users.down.sql  20250813171838_create_users.up.sql  20250813171908_create_tokens.up.sql  20250818113608_create_verification_links.down.sql  20250818113608_create_verification_links.up.sql  20250818143130_create_token_user_last_login_trigger.down.sql  20250818174746_create_forgot_password_links.up.sql  20251029165101_create_password_history.down.sql  20251029165101_create_password_history.up.sql  20251101224247_add_passkey_support_to_users.down.sql  20251101224247_add_passkey_support_to_users.up.sql  20251101224248_create_passkey_credentials.down.sql  20251101224248_create_passkey_credentials.up.sql  20251101224249_create_authentication_audit_log.down.sql  20251101224249_create_authentication_audit_log.up.sql
backend/auth-service/migrations/2025-08-13-171838_create_users/: down.sql  up.sql
backend/auth-service/migrations/2025-08-13-171908_create_tokens/: down.sql
backend/auth-service/migrations/2025-08-18-143130_create_token_user_last_login_trigger/: up.sql
backend/auth-service/migrations/2025-08-18-174746_create_forgot_password_links/: down.sql
backend/auth-service/migrations/2025-10-16-160000_add_passkey_support/: up.sql
backend/auth-service/migrations/20250818174746_create_forgot_password_links/: down.sql
backend/auth-service/migrations/20251016160000_add_passkey_support/: down.sql  up.sql
backend/auth-service/src/: app_state.rs  config.rs  database.rs  grpc.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  utils.rs
backend/auth-service/src/config/: app_config.rs  server_config.rs
backend/auth-service/src/database/: activation_links.rs  authentication_audit_logs.rs  forgot_password_links.rs  passkey_credentials.rs  password_history.rs  tokens.rs  users.rs
backend/auth-service/src/grpc/: auth_service.rs  email_service.rs
backend/auth-service/src/models/: activation_link.rs  authentication_audit_log.rs  dto.rs  error.rs  forgot_password_link.rs  passkey_credential.rs  password_history.rs  request.rs  response.rs  token.rs  token_claim.rs  user.rs
backend/auth-service/src/models/dto/: login_info.rs  message.rs  register_info.rs  token_response.rs
backend/auth-service/src/models/request/: forgot_password_info.rs  login_info.rs  passkey_info.rs  passkey_login_info.rs  passkey_register_info.rs  register_info.rs  reset_password_info.rs
backend/auth-service/src/models/response/: error.rs  health.rs  message.rs  token.rs
backend/auth-service/src/routes/: activate.rs  audit.rs  change_password.rs  forgot_password.rs  health.rs  login.rs  login_passkey.rs  logout.rs  passkey_login.rs  passkey_manage.rs  passkey_register.rs  register.rs  register_passkey.rs  verify.rs
backend/auth-service/src/routes/middlewares/: auth_guard.rs
backend/auth-service/src/utils/: audit.rs  captcha.rs  password.rs
backend/auth-service/tests/: integration_test.rs
backend/email-service/: CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.dev  build.rs
backend/email-service/emails/: activate_account_template.html  forgot_password_template.html
backend/email-service/proto/: email_service.proto
backend/email-service/src/: config.rs  health.rs  lib.rs  main.rs  service.rs
backend/email-service/tests/: integration_test.rs
backend/settings-service/: Cargo.toml  Dockerfile  Dockerfile.dev  diesel.toml
backend/settings-service/migrations/: 202509300938310000_create_settings.up.sql  202510301400000000_add_language_constraint.down.sql  202510301400000000_add_language_constraint.up.sql  20251031100000_add_language_currency_constraints.down.sql  20251031100000_add_language_currency_constraints.up.sql  20251103000000_create_wallets.down.sql  20251103000000_create_wallets.up.sql  20251108000000_create_wallets.up.sql
backend/settings-service/migrations/2025-09-30-093831-0000_create_settings/: down.sql  up.sql
backend/settings-service/src/: app_state.rs  config.rs  database.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
backend/settings-service/src/database/: settings.rs  wallet.rs
backend/settings-service/src/grpc/: auth_service.rs
backend/settings-service/src/models/: response.rs  settings.rs  wallet.rs
backend/settings-service/src/models/response/: health.rs  message.rs
backend/settings-service/src/routes/: health.rs  user.rs  wallet.rs
backend/settings-service/src/routes/middlewares/: auth_guard.rs
backend/settings-service/tests/: integration_test.rs
backend/shared-types/: Cargo.toml  README.md
backend/shared-types/locales/: de.json  en.json  es.json  fr.json  ro.json
backend/shared-types/src/: enums.rs  error.rs  i18n.rs  lib.rs  response.rs
changelogs/: auth-service-CHANGELOG.md  email-service-CHANGELOG.md  frontend-CHANGELOG.md  infrastructure-CHANGELOG.md  notification-service-CHANGELOG.md  settings-service-CHANGELOG.md  transaction-service-CHANGELOG.md
docs/: PASSKEY_ARCHITECTURE_DIAGRAMS.md  PASSKEY_AUTHENTICATION_UX.md  PASSKEY_IMPLEMENTATION_CHECKLIST.md  PASSKEY_IMPLEMENTATION_GUIDE.md  PASSKEY_SUMMARY.md  README.md
frontend/: .env.example  .eslintrc.js  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  TRANSACTION_IMPLEMENTATION.md  bun.lockb  complete-transaction-setup.mjs  components.d.ts  eslint.config.js  (+9 more)
(+180 files in other folders)
