[package]
name = "auth-service"
version = "0.0.3"
edition = "2024"
build = "build.rs"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.4"
chrono = "0.4.41"
deadpool = "0.12.2"
diesel = { version = "2.2.12", features = ["uuid", "chrono"] }
diesel-async = { version = "0.6.1", features = [
    "deadpool",
    "pool",
    "postgres",
] }
dotenv = "0.15.0"
email_address = "0.2.9"
jsonwebtoken = "9.3.1"
prost = "0.14.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.14.1"
tonic-prost = "0.14.1"
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }

[build-dependencies]
tonic-prost-build = "0.14.1"
