[package]
name = "auth-service"
version = "0.0.7"
edition = "2024"
build = "build.rs"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.4"
chrono = "0.4.41"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "migrate",
] }
dotenv = "0.15.0"
email_address = "0.2.9"
jsonwebtoken = "10.1.0"
prost = "0.14.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.14.1"
tonic-prost = "0.14.1"
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
shared-types = { path = "../shared-types" }

[build-dependencies]
tonic-prost-build = "0.14.1"
