[package]
name = "auth-service"
version = "0.0.12"
edition = "2024"
build = "build.rs"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.6"
chrono = "0.4.42"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "migrate",
] }
dotenv = "0.15.0"
email_address = "0.2.9"
jsonwebtoken = "9.3.1"
prost = "0.14.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
shared-types = { path = "../shared-types" }
webauthn-rs = "0.5"
webauthn-rs-proto = "0.5"
url = "2.5"

[build-dependencies]
tonic-prost-build = "0.14.2"
