[package]
name = "email-service"
version = "0.0.5"
edition = "2024"
build = "build.rs"

[dependencies]
dotenv = "0.15.0"
handlebars = "6.3.2"
lettre = { version = "0.11.18", features = ["builder"] }
prost = "0.14.1"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.14.1"
tonic-prost = "0.14.1"

[build-dependencies]
tonic-prost-build = "0.14.1"
