[package]
name = "email-service"
version = "0.0.8"
edition = "2024"
build = "build.rs"

[dependencies]
dotenv = "0.15.0"
handlebars = "6.3.2"
lettre = { version = "0.11.19", features = ["builder"] }
prost = "0.14.1"
serde_json = "1.0.142"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.41"

[build-dependencies]
tonic-prost-build = "0.14.2"
