[package]
name = "email-service"
version = "0.0.9"
edition = "2024"
build = "build.rs"

[dependencies]
axum = "0.8.6"
dotenv = "0.15.0"
handlebars = "6.3.2"
lettre = { version = "0.11.19", features = ["builder"] }
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.41"

[build-dependencies]
tonic-prost-build = "0.14.2"
