[package]
name = "settings-service"
version = "0.0.4"
edition = "2024"
build = "build.rs"

[lib]
name = "settings_service"
path = "src/lib.rs"

[[bin]]
name = "settings-service"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "migrate",
] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
prost = "0.14.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.14.1"
tonic-prost = "0.14.1"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
shared-types = { path = "../shared-types" }

[dev-dependencies]
axum-test = "18.2.1"
tower = { version = "0.5.2", features = ["util"] }
serde_json = "1.0"
testcontainers = "0.23.2"
testcontainers-modules = { version = "0.11.4", features = ["postgres"] }

[build-dependencies]
tonic-prost-build = "0.14.1"
